# TensorL

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  config.rs  hotkey.rs  main.rs  translator.rs  tray.rs
